added react project

--- a/index.html
+++ b/index.html
@@ -368,51 +368,51 @@
             <div class="work-box">
               <a href="" class="portfolio-lightbox"> </a>
               <div class="work-img">
-                <a href="" class="portfolio-lightbox"> </a><a href="https://github.com/upasani/Task_manager"
+                <a href="" class="portfolio-lightbox"> </a><a href="https://github.com/upasani/ecommerce"
                   target="_blank">
-                  <img width="350px"
-                    src="https://www.linkpicture.com/q/taskmanager.png"
-                    alt="" class="img-fluid" /></a>
+                  <img width="350px" src="./assets/img/ecom_my.png" alt="" class="img-fluid" /></a>
               </div>
 
               <div class="work-content">
                 <div style="justify-content: center" class="row">
                   <div class="col-sm-8">
-                    <h3 class="w-title"> <a href="https://www.youtube.com/watch?v=U6ArDOZKeb4" target="_blank">Task Manager
+                    <h3 class="w-title"> <a href="https://ecommerce-upasani.vercel.app/" target="_blank">Ecommerce
+                        Website
                         <i class="bi bi-link-45deg"></i></a></h3>
                     <div>
-                      <a href="https://github.com/upasani/Task_manager" target="_blank">
+                      <a href="https://github.com/upasani/ecommerce" target="_blank">
                         <img style="margin-left: 80px; border-radius: 50px"
                           src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt=""
                           height="50px" width="50px" /> <i class="bi bi-link-45deg"></i></a>
                     </div>
                     <div class="w-more">
                       <!-- <span class="w-ctegory">Teck Stacks</span> / -->
-                      <span class="w-date">This is the mini project in which you can add your task.
-                        also change the status of your task. 
-                        Once it is done you can also remove that task
+                      <span class="w-date">
+                        This is Ecommerce website that built within 10 days.In which you can purchase product.
+                        This is an individiual project that build using MERN stack.Also uses the redux library for
+                        Manage state.
                       </span>
                     </div>
 
                     <div>
                       <br />
-                      <a href="https://www.w3.org/html/" target="_blank" rel="noreferrer">
+                      <a href="https://reactjs.org/" target="_blank" rel="noreferrer">
                         <img
-                          src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg"
-                          alt="html5" width="40" height="40" />
+                          src="https://cdn.worldvectorlogo.com/logos/react-1.svg"
+                          alt="React" width="40" height="40" />
                       </a>
 
-                      <a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer">
+                      <a href="https://redux.js.org/" target="_blank" rel="noreferrer">
                         <img
-                          src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg"
-                          alt="css3" width="40" height="40" />
+                          src="https://raw.githubusercontent.com/reduxjs/redux/master/logo/logo.png"
+                          alt="Redux" width="40" height="40" />
                       </a>
 
-                      <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"
+                      <a href="https://www.tutorialspoint.com/nodejs/nodejs_express_framework.htm" target="_blank"
                         rel="noreferrer">
                         <img
-                          src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
-                          alt="javascript" width="40" height="40" />
+                          src="https://raw.githubusercontent.com/devicons/devicon/master/icons/express/express-original-wordmark.svg"
+                          alt="Express Js" width="40" height="40" />
                       </a>
 
                     </div>
@@ -448,7 +448,7 @@
                     </div>
                     <div class="w-more">
                       <!-- <span class="w-ctegory">Teck Stacks</span> / -->
-                      <span class="w-date">A e-commerce website where you can buy sports related things like 
+                      <span class="w-date">A e-commerce website where you can buy sports related things like
                         sportswear,sportsshoes,gym related items etc.</span>
                     </div>
 
@@ -572,12 +572,12 @@
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-      </div>
-    </div>
+  <!-- You can delete the links only if you purchased the pro version. -->
+  <!-- Licensing information: https://bootstrapmade.com/license/ -->
+  <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
+  <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+  </div>
+  </div>
   </footer> -->
   <!-- End  Footer -->
 
