--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <a href="https://github.com/upasani" target="_blank" class="facebook"><i class="bx bxl-github"></i></a>
 
-          <a href="https://drive.google.com/file/d/1wab5qROfSW3t8N0elIipfhdlBFNZPX-L/view?usp=sharing" target="_blank"
+          <a href="https://drive.google.com/file/d/1a0_ry1NSTerhkAOVRbolB8__fIsTEItQ/view?usp=sharing" target="_blank"
             class="instagram" title="Resume">
             <i class="bx bx-down-arrow-alt"> </i>
           </a>
@@ -84,7 +84,7 @@
           </li>
 
           <li>
-            <a href="https://drive.google.com/file/d/1wab5qROfSW3t8N0elIipfhdlBFNZPX-L/view?usp=sharing"
+            <a href="https://drive.google.com/file/d/1a0_ry1NSTerhkAOVRbolB8__fIsTEItQ/view?usp=sharing"
               class="nav-link scrollto" target="_blank"><i class="bx bx-book-content"></i> <span>Resume</span></a>
           </li>
         </ul>
@@ -120,9 +120,9 @@
               style="border-radius: 10px; height: 250px; margin-left: 20px" />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Aspiring Full-stack Web Developer.</h3>
+            <h3> Full-stack Web Developer.</h3>
             <p class="fst-italic">
-              An aspiring full-stack web developer with a specialization
+              A full-stack web developer with a specialization
               in MERN stack. With a keen interest in technology and the
               ever-growing IT world, excited to be a part of a
               challenging work environment to hone gained skillset.
