made some changes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </li>
 
           <li>
-            <a href="https://drive.google.com/file/d/1a0_ry1NSTerhkAOVRbolB8__fIsTEItQ/view?usp=sharing"
+            <a href="https://drive.google.com/file/d/1Iejo9R9vVjEBNRjkW3O2hnLmI3LmeW81/view?usp=sharing"
               class="nav-link scrollto" target="_blank"><i class="bx bx-book-content"></i> <span>Resume</span></a>
           </li>
         </ul>
@@ -120,7 +120,7 @@
               style="border-radius: 10px; height: 250px; margin-left: 20px" />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3> Full-stack Web Developer.</h3>
+            <h3> Software Engineer</h3>
             <p class="fst-italic">
               A full-stack web developer with a specialization
               in MERN stack. With a keen interest in technology and the
