made some changes

--- a/index.html
+++ b/index.html
@@ -122,12 +122,11 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3> Software Engineer</h3>
             <p class="fst-italic">
-              A full-stack web developer with a specialization
-              in MERN stack. With a keen interest in technology and the
-              ever-growing IT world, excited to be a part of a
-              challenging work environment to hone gained skillset.
-              looking forward to optimizing towards the growth of an
-              organization.
+              Software Engineer with 1.4 years of hands-on industry experience, specializing in web development
+              technologies.
+              Proficient in HTML, CSS, and JavaScript with a strong foundation in React.js. Well-versed in user-friendly
+              interfaces and enhancing user experiences.
+              Possesses an understanding of SQL-Server for data management.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -142,7 +141,7 @@
                   </li>
                   <li>
                     <i class="bi bi-chevron-right"></i>
-                    <strong>City:</strong> <span>Nasik, Maharashtra</span>
+                    <strong>City:</strong> <span>Pune, Maharashtra</span>
                   </li>
                 </ul>
               </div>
@@ -151,7 +150,7 @@
                   <li>
                     <i class="bi bi-chevron-right"></i>
                     <strong>Profile:</strong>
-                    <span>Web Developer</span>
+                    <span>Software Engineer</span>
                   </li>
                   <li>
                     <i class="bi bi-chevron-right"></i>
@@ -397,15 +396,13 @@
                     <div>
                       <br />
                       <a href="https://reactjs.org/" target="_blank" rel="noreferrer">
-                        <img
-                          src="https://cdn.worldvectorlogo.com/logos/react-1.svg"
-                          alt="React" width="40" height="40" />
+                        <img src="https://cdn.worldvectorlogo.com/logos/react-1.svg" alt="React" width="40"
+                          height="40" />
                       </a>
 
                       <a href="https://redux.js.org/" target="_blank" rel="noreferrer">
-                        <img
-                          src="https://raw.githubusercontent.com/reduxjs/redux/master/logo/logo.png"
-                          alt="Redux" width="40" height="40" />
+                        <img src="https://raw.githubusercontent.com/reduxjs/redux/master/logo/logo.png" alt="Redux"
+                          width="40" height="40" />
                       </a>
 
                       <a href="https://www.tutorialspoint.com/nodejs/nodejs_express_framework.htm" target="_blank"
